force-app/main/default/objects/Product_Catalog_Item__c/Product_Catalog_Item__c.object-meta.xml
<CustomObject>
    <label>Product Catalog Item</label>
    <nameField>
        <displayFormat>PCI{000000}</displayFormat>
        <label>Product Catalog Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Catalog Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>