force-app/main/default/objects/Product_Catalog_Item__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alacarte</fullName>
            </value>
            <value>
                <fullName>Meal - with Rice</fullName>
            </value>
            <value>
                <fullName>Meal - Unli Rice</fullName>
            </value>
            <value>
                <fullName>Meal - with Rice &amp; Drink</fullName>
            </value>
            <value>
                <fullName>Bilao / Family Bundle</fullName>
            </value>
            <value>
                <fullName>Snacks</fullName>
            </value>
            <value>
                <fullName>Beverages</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Veggies</fullName>
            </value>
            <value>
                <fullName>Inasal</fullName>
            </value>
            <value>
                <fullName>BBQ/Grill/Lechon</fullName>
            </value>
            <value>
                <fullName>Add ons</fullName>
            </value>
            <value>
                <fullName>Dessert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>