force-app/main/default/objects/Product_Catalog_Item__c/fields/Display_in_Website__c.field-meta.xml
<CustomField>
    <fullName>Display_in_Website__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display in Website</label>
    <type>Checkbox</type>
</CustomField>