force-app/main/default/objects/Product_Catalog_Item__c/fields/Popular__c.field-meta.xml
<CustomField>
    <fullName>Popular__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Popular</label>
    <type>Checkbox</type>
</CustomField>