force-app/main/default/objects/Product_Catalog_Item__c/fields/Product_Catalog__c.field-meta.xml
<CustomField>
    <fullName>Product_Catalog__c</fullName>
    <label>Product Catalog</label>
    <referenceTo>Product_Catalog__c</referenceTo>
    <relationshipName>Product_Categories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>