force-app/main/default/objects/Product_Catalog_Item__c/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Group</label>
    <referenceTo>Product_Group__c</referenceTo>
    <relationshipName>Product_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>