force-app/main/default/objects/Product_Catalog_Item__c/fields/Row_Priority__c.field-meta.xml
<CustomField>
    <fullName>Row_Priority__c</fullName>
    <label>Row Priority</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>