force-app/main/default/objects/Product_Catalog_Item__c/fields/TECH_InStock__c.field-meta.xml
<CustomField>
    <fullName>TECH_InStock__c</fullName>
    <defaultValue>true</defaultValue>
    <label>TECH_InStock</label>
    <type>Checkbox</type>
</CustomField>