force-app/main/default/objects/Product_Catalog_Item__c/fields/TECH_PriceBookEntryId__c.field-meta.xml
<CustomField>
    <fullName>TECH_PriceBookEntryId__c</fullName>
    <label>TECH_PriceBookEntryId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>