force-app/main/default/objects/Product_Catalog_Item__c/fields/TECH_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>TECH_Unit_Price__c</fullName>
    <label>TECH_Unit_Price</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>