force-app/main/default/objects/Product_Catalog_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Product_Group__c</columns>
    <columns>Priority__c</columns>
    <columns>Product_Catalog__c</columns>
    <columns>Category__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>